netpol-frontend-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: dev
spec:
  podSelector:
    matchLabels:
      role: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 80
  
  egress:
  - to:
     - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    ports:
     - port: 53
       protocol: UDP
     - port: 53
       protocol: TCP
   
  - to:
     - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: staging
       podSelector:
           matchLabels:
                  role: backend
    ports:
     - port: 80
